--- a/src/be/ac/ulb/infof307/g06/views/statisticsViews/OverallStatsView.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/statisticsViews/OverallStatsView.fxml
@@ -20,16 +20,16 @@
 
 <AnchorPane prefHeight="900.0" prefWidth="1500.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.ac.ulb.infof307.g06.views.statisticsViews.StatsViewController">
    <children>
-      <Button fx:id="backToProjectMenu" layoutX="1254.0" layoutY="820.0" mnemonicParsing="false" onAction="#statsEvents" prefHeight="54.0" prefWidth="201.0" style="-fx-background-color: #4fc3f7;" styleClass="container" stylesheets="@styles.css" text="BACK" textFill="WHITE">
+      <Button fx:id="backToProjectMenu" layoutX="1254.0" layoutY="820.0" mnemonicParsing="false" onAction="#statsEvents" prefHeight="54.0" prefWidth="201.0" style="-fx-background-color: #4fc3f7;" styleClass="container" stylesheets="@StatsView.css" text="BACK" textFill="WHITE">
          <font>
             <Font name="Calibri" size="24.0" />
          </font>
       </Button>
       <VBox layoutX="548.0" layoutY="107.0" prefHeight="704.0" prefWidth="283.0" spacing="51.0">
          <children>
-            <Pane prefHeight="200.0" prefWidth="275.0" styleClass="container" stylesheets="@styles.css">
+            <Pane prefHeight="200.0" prefWidth="275.0" styleClass="container" stylesheets="@StatsView.css">
                <children>
-                  <Label layoutX="14.0" layoutY="14.0" prefHeight="43.0" prefWidth="168.0" styleClass="shadow" stylesheets="@styles.css" text="Collaborators" textFill="WHITE">
+                  <Label layoutX="14.0" layoutY="14.0" prefHeight="43.0" prefWidth="168.0" styleClass="shadow" stylesheets="@StatsView.css" text="Collaborators" textFill="WHITE">
                      <font>
                         <Font name="Cambria Bold" size="24.0" />
                      </font>
@@ -41,9 +41,9 @@
                   </Label>
                </children>
             </Pane>
-            <Pane prefHeight="200.0" prefWidth="275.0" styleClass="container" stylesheets="@styles.css">
+            <Pane prefHeight="200.0" prefWidth="275.0" styleClass="container" stylesheets="@StatsView.css">
                <children>
-                  <Label layoutX="14.0" layoutY="14.0" prefHeight="43.0" prefWidth="116.0" styleClass="shadow" stylesheets="@styles.css" text="Tasks" textFill="WHITE">
+                  <Label layoutX="14.0" layoutY="14.0" prefHeight="43.0" prefWidth="116.0" styleClass="shadow" stylesheets="@StatsView.css" text="Tasks" textFill="WHITE">
                      <font>
                         <Font name="Cambria Bold" size="24.0" />
                      </font>
@@ -55,9 +55,9 @@
                   </Label>
                </children>
             </Pane>
-            <Pane prefHeight="200.0" prefWidth="275.0" styleClass="container" stylesheets="@styles.css">
+            <Pane prefHeight="200.0" prefWidth="275.0" styleClass="container" stylesheets="@StatsView.css">
                <children>
-                  <Label layoutX="14.0" layoutY="14.0" prefHeight="43.0" prefWidth="116.0" styleClass="shadow" stylesheets="@styles.css" text="Projects" textFill="WHITE">
+                  <Label layoutX="14.0" layoutY="14.0" prefHeight="43.0" prefWidth="116.0" styleClass="shadow" stylesheets="@StatsView.css" text="Projects" textFill="WHITE">
                      <font>
                         <Font name="Cambria Bold" size="24.0" />
                      </font>
@@ -73,11 +73,11 @@
       </VBox>
       <VBox layoutX="873.0" layoutY="107.0" prefHeight="704.0" prefWidth="513.0" spacing="10.0">
          <children>
-            <ScrollPane prefHeight="322.0" prefWidth="513.0" styleClass="container" stylesheets="@styles.css">
+            <ScrollPane prefHeight="322.0" prefWidth="513.0" styleClass="container" stylesheets="@StatsView.css">
                <content>
                 <AnchorPane fx:id="pieChartAnchorPane" minHeight="0.0" minWidth="0.0" prefHeight="541.0" prefWidth="556.0">
                      <children>
-                        <PieChart fx:id="projectsChart" layoutX="-1.0" layoutY="-9.0" prefHeight="550.0" prefWidth="588.0" styleClass="container" stylesheets="@styles.css" />
+                        <PieChart fx:id="projectsChart" layoutX="-1.0" layoutY="-9.0" prefHeight="550.0" prefWidth="588.0" styleClass="container" stylesheets="@StatsView.css" />
                      </children>
                   </AnchorPane>
                </content>
@@ -86,7 +86,7 @@
               <content>
                 <AnchorPane fx:id="barChartAnchorPane" minHeight="0.0" minWidth="0.0" prefHeight="463.0" prefWidth="1075.0">
                      <children>
-                        <Pane fx:id="barChartPane" layoutY="2.0" prefHeight="461.0" prefWidth="943.0" styleClass="container" stylesheets="@styles.css">
+                        <Pane fx:id="barChartPane" layoutY="2.0" prefHeight="461.0" prefWidth="943.0" styleClass="container" stylesheets="@StatsView.css">
                            <children>
                               <BarChart fx:id="tasksChart" layoutX="-3.0" layoutY="-1.0" prefHeight="358.0" prefWidth="501.0">
                                 <xAxis>
@@ -122,9 +122,9 @@
       <Polygon fill="#4ec8f50d" layoutX="-204.0" layoutY="-30.0" points="205.59999084472656, 517.0, 205.59999084472656, 33.0, 456.5999755859375, 33.0" stroke="TRANSPARENT" strokeType="INSIDE" />
       <Polygon fill="#4fc3f70d" layoutX="-161.0" layoutY="-37.0" points="161.59999084472656, 522.0, 161.59999084472656, 26.0, 357.5999755859375, 26.0" stroke="TRANSPARENT" strokeType="INSIDE" />
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#e1e1e1" height="77.0" stroke="#e1e1e1" strokeType="INSIDE" width="1500.0" />
-      <Pane layoutX="119.0" layoutY="107.0" prefHeight="704.0" prefWidth="380.0" styleClass="container" stylesheets="@styles.css">
+      <Pane layoutX="119.0" layoutY="107.0" prefHeight="704.0" prefWidth="380.0" styleClass="container" stylesheets="@StatsView.css">
          <children>
-            <Button fx:id="overallViewBtn" layoutX="89.0" layoutY="61.0" mnemonicParsing="false" onAction="#statsEvents" prefHeight="158.0" prefWidth="202.0" styleClass="stats-choice" stylesheets="@styles.css" text="OVERALL VIEW" textFill="WHITE">
+            <Button fx:id="overallViewBtn" layoutX="89.0" layoutY="61.0" mnemonicParsing="false" onAction="#statsEvents" prefHeight="158.0" prefWidth="202.0" styleClass="stats-choice" stylesheets="@StatsView.css" text="OVERALL VIEW" textFill="WHITE">
                <font>
                   <Font name="Cambria" size="18.0" />
                </font>
@@ -141,19 +141,19 @@
                </font>
             </Button>
             <Text fx:id="msgExportText" fill="#407a4b" layoutX="45.0" layoutY="675.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="289.99999999999994" />
-            <Button fx:id="projectViewBtn" layoutX="89.0" layoutY="273.0" mnemonicParsing="false" onAction="#statsEvents" prefHeight="158.0" prefWidth="202.0" styleClass="stats-choice" stylesheets="@styles.css" text="PROJECT VIEW" textFill="WHITE">
+            <Button fx:id="projectViewBtn" layoutX="89.0" layoutY="273.0" mnemonicParsing="false" onAction="#statsEvents" prefHeight="158.0" prefWidth="202.0" styleClass="stats-choice" stylesheets="@StatsView.css" text="PROJECT VIEW" textFill="WHITE">
                <font>
                   <Font name="Cambria" size="18.0" />
                </font>
             </Button>
          </children>
       </Pane>
-      <Label layoutX="33.0" layoutY="3.0" prefHeight="70.0" prefWidth="283.0" styleClass="shadow" stylesheets="@styles.css" text="Statistics " textFill="WHITE">
+      <Label layoutX="33.0" layoutY="3.0" prefHeight="70.0" prefWidth="283.0" styleClass="shadow" stylesheets="@StatsView.css" text="Statistics " textFill="WHITE">
          <font>
             <Font size="48.0" />
          </font>
       </Label>
-      <Label layoutX="44.0" layoutY="59.0" prefHeight="17.0" prefWidth="151.0" styleClass="shadow" stylesheets="@styles.css" text="Overall view" textFill="WHITE">
+      <Label layoutX="44.0" layoutY="59.0" prefHeight="17.0" prefWidth="151.0" styleClass="shadow" stylesheets="@StatsView.css" text="Overall view" textFill="WHITE">
          <font>
             <Font name="DejaVu Sans Condensed Bold" size="12.0" />
          </font>
