--- a/src/be/ac/ulb/infof307/g06/views/statisticsViews/IndividualStatsView.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/statisticsViews/IndividualStatsView.fxml
@@ -64,11 +64,11 @@
          </children>
       </VBox>
       <Line endX="1394.0" layoutX="104.0" layoutY="77.0" startX="-100.0" stroke="WHITE" />
-      <VBox layoutX="1161.0" layoutY="107.0" prefHeight="704.0" prefWidth="258.0" spacing="50.0">
+      <VBox layoutX="1161.0" layoutY="107.0" prefHeight="704.0" prefWidth="290.0" spacing="50.0">
          <children>
             <Pane prefHeight="200.0" prefWidth="275.0" styleClass="container" stylesheets="@StatsView.css">
                <children>
-                  <Label layoutX="14.0" layoutY="14.0" prefHeight="43.0" prefWidth="168.0" styleClass="shadow" stylesheets="@StatsView.css" text="Starter date" textFill="WHITE">
+                  <Label layoutX="14.0" layoutY="14.0" prefHeight="43.0" prefWidth="168.0" styleClass="shadow" stylesheets="@StatsView.css" text="Start date" textFill="WHITE">
                      <font>
                         <Font name="Cambria Bold" size="24.0" />
                      </font>
@@ -82,7 +82,7 @@
             </Pane>
             <Pane prefHeight="200.0" prefWidth="275.0" styleClass="container" stylesheets="@StatsView.css">
                <children>
-                  <Label layoutX="14.0" layoutY="14.0" prefHeight="43.0" prefWidth="168.0" styleClass="shadow" stylesheets="@StatsView.css" text="Estimated date" textFill="WHITE">
+                  <Label layoutX="14.0" layoutY="14.0" prefHeight="43.0" prefWidth="226.0" styleClass="shadow" stylesheets="@StatsView.css" text="Estimated date" textFill="WHITE">
                      <font>
                         <Font name="Cambria Bold" size="24.0" />
                      </font>
