--- a/src/be/ac/ulb/infof307/g06/views/statisticsViews/OverallStatsView.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/statisticsViews/OverallStatsView.fxml
@@ -77,23 +77,23 @@
                <content>
                 <AnchorPane fx:id="pieChartAnchorPane" minHeight="0.0" minWidth="0.0" prefHeight="541.0" prefWidth="556.0">
                      <children>
-                        <PieChart fx:id="projectsChart" layoutX="-1.0" layoutY="-9.0" prefHeight="550.0" prefWidth="588.0" styleClass="container" stylesheets="@StatsView.css" />
+                        <PieChart fx:id="projectsChart" layoutX="-32.0" layoutY="-4.0" prefHeight="550.0" prefWidth="588.0" styleClass="container" stylesheets="@StatsView.css" />
                      </children>
                   </AnchorPane>
                </content>
             </ScrollPane>
             <ScrollPane prefHeight="373.0" prefWidth="513.0">
               <content>
-                <AnchorPane fx:id="barChartAnchorPane" minHeight="0.0" minWidth="0.0" prefHeight="463.0" prefWidth="1075.0">
+                <AnchorPane fx:id="barChartAnchorPane" minHeight="0.0" minWidth="0.0" prefHeight="358.0" prefWidth="513.0">
                      <children>
-                        <Pane fx:id="barChartPane" layoutY="2.0" prefHeight="461.0" prefWidth="943.0" styleClass="container" stylesheets="@StatsView.css">
+                        <Pane fx:id="barChartPane" layoutY="2.0" prefHeight="358.0" prefWidth="513.0" styleClass="container" stylesheets="@StatsView.css">
                            <children>
-                              <BarChart fx:id="tasksChart" layoutX="-3.0" layoutY="-1.0" prefHeight="358.0" prefWidth="501.0">
+                              <BarChart fx:id="tasksChart" categoryGap="15.0" layoutX="-3.0" layoutY="-1.0" prefHeight="358.0" prefWidth="501.0" title="Project Tasks">
                                 <xAxis>
-                                  <CategoryAxis label="Projects" side="BOTTOM" />
+                                  <CategoryAxis endMargin="10.0" label="Projects" prefHeight="55.0" prefWidth="740.0" side="BOTTOM" tickLabelRotation="-51.3" />
                                 </xAxis>
                                 <yAxis>
-                                  <NumberAxis label="Tasks" side="LEFT" />
+                                  <NumberAxis label="Tasks" minorTickVisible="false" side="LEFT" />
                                 </yAxis>
                               </BarChart>
                            </children>
